Fix author view height after scroll header change

--- a/src/index.css
+++ b/src/index.css
@@ -1024,8 +1024,7 @@ body {
 
 .author-view {
   height: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr;
+  display: block;
   position: relative;
   max-width: 100%;
 }
