--- a/src/index.css
+++ b/src/index.css
@@ -551,6 +551,14 @@ body {
   display: block;
 }
 
+.drawer-version {
+  margin: -2px 2px 10px;
+  font-size: 11px;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: #6f8099;
+}
+
 @media (min-width: 1024px) {
   .app-shell {
     padding-left: 320px;
